Fix header on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
 @layer utilities {
     .no-scrollbar::-webkit-scrollbar {
         display: none;
